// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`io should generate a nested data input type 1`] = `
Object {
  "firstName": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": "First name",
    "extensions": undefined,
    "name": "firstName",
    "type": "String",
  },
  "lastName": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": "Last name",
    "extensions": undefined,
    "name": "lastName",
    "type": "String!",
  },
  "number": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": "Number on the shirt",
    "extensions": undefined,
    "name": "number",
    "type": "Int!",
  },
}
`;

exports[`io should generate a nested data output type 1`] = `
Object {
  "firstName": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": "First name",
    "extensions": undefined,
    "isDeprecated": false,
    "name": "firstName",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "String",
  },
  "lastName": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": "Last name",
    "extensions": undefined,
    "isDeprecated": false,
    "name": "lastName",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "String",
  },
  "number": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": "Number on the shirt",
    "extensions": undefined,
    "isDeprecated": false,
    "name": "number",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Int",
  },
}
`;

exports[`io should generate an input type 1`] = `
Object {
  "clientMutationId": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "name": "clientMutationId",
    "type": "String",
  },
  "data": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "name": "data",
    "type": "NewSimpleActionDataInput",
  },
}
`;

exports[`io should generate an input type 2`] = `
Object {
  "firstName": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": "First name",
    "extensions": undefined,
    "name": "firstName",
    "type": "String",
  },
  "lastName": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": "Last name",
    "extensions": undefined,
    "name": "lastName",
    "type": "String!",
  },
}
`;

exports[`io should generate an output type 1`] = `
Object {
  "clientMutationId": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "clientMutationId",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "String",
  },
  "result": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "result",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "NewSimpleActionDataOutput",
  },
}
`;

exports[`io should generate an output type 2`] = `
Object {
  "luckyNumber": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": "The perfect lucky number for the given name",
    "extensions": undefined,
    "isDeprecated": false,
    "name": "luckyNumber",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Int",
  },
}
`;

exports[`io should handle nested input and output definitions 1`] = `
Object {
  "clientMutationId": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "name": "clientMutationId",
    "type": "String",
  },
  "data": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "name": "data",
    "type": "BuildTeamDataInput",
  },
}
`;

exports[`io should handle nested input and output definitions 2`] = `
Object {
  "players": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": "List of player",
    "extensions": undefined,
    "name": "players",
    "type": "BuildTeamPlayersL2DataInput",
  },
  "teamName": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": "Name of the team",
    "extensions": undefined,
    "name": "teamName",
    "type": "String",
  },
}
`;

exports[`io should handle nested input and output definitions 3`] = `
Object {
  "defence": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": "Defence players",
    "extensions": undefined,
    "name": "defence",
    "type": "[BuildTeamPlayersDefenceL3DataInput]",
  },
  "offense": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "deprecationReason": undefined,
    "description": "Offense players",
    "extensions": undefined,
    "name": "offense",
    "type": "[BuildTeamPlayersOffenseL3DataInput]",
  },
}
`;
